@@ -12,6 +12,8 @@ Bug-Fixes:
 
 Other reported bug-fixes:
 
+ - Fixed bug which caused NullPointerException in Refactoring when modifying column types
+
  - Fixed bug which occurred when generating FK SQL for DB2 where the update and delete action clause result 
    in syntax error for certain standard constraint actions.
 
